Configure Puppeteer for Render: add postinstall script

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "server": "node server.js",
     "start": "node server.js",
+    "postinstall": "npx puppeteer browsers install chrome",
     "build": "vite build",
     "preview": "vite preview"
   },
