--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "server": "node server.js",
     "start": "node server.js",
-    "postinstall": "npx puppeteer browsers install chrome",
+    "postinstall": "npx playwright install chromium",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -16,7 +16,7 @@
     "cors": "^2.8.5",
     "express": "^5.2.1",
     "lucide-react": "^0.561.0",
-    "puppeteer": "^24.33.0",
+    "playwright": "^1.57.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
