--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     "dev": "vite",
     "server": "node index.js",
     "start": "node index.js",
-    "postinstall": "npx playwright install chromium",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@google/genai": "^1.33.0",
     "cors": "^2.8.5",
-    "express": "^5.2.1",
+    "express": "^4.19.2",
     "lucide-react": "^0.561.0",
-    "playwright": "^1.57.0",
+    "playwright-core": "^1.44.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
