--- a/package.json
+++ b/package.json
@@ -1,28 +1,13 @@
 {
-  "name": "reelscribe",
-  "private": true,
-  "version": "0.0.0",
+  "name": "reel-caption-extractor",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "server": "node index.js",
-    "start": "node index.js",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node index.js"
   },
   "dependencies": {
-    "@google/genai": "^1.33.0",
-    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "lucide-react": "^0.561.0",
-    "playwright-core": "^1.44.0",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "playwright": "^1.44.0",
+    "cors": "^2.8.5"
   }
 }
