--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "reel-caption-extractor",
   "version": "1.0.0",
   "type": "module",
+  "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.19.2",
-    "playwright": "^1.44.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "playwright": "^1.44.0"
   }
 }
