--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
-  "name": "reel-caption-extractor",
-  "version": "1.0.0",
+  "name": "reelscribe",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "vite",
+    "server": "node index.js",
+    "start": "node index.js",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "@google/genai": "^1.33.0",
     "cors": "^2.8.5",
-    "playwright": "^1.44.0"
+    "express": "^4.19.2",
+    "lucide-react": "^0.561.0",
+    "playwright": "^1.44.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
+  },
+  "devDependencies": {
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
