--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "lucide-react": "^0.561.0",
-    "playwright": "^1.44.0",
+    "playwright": "1.57.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
